// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getKey server and live 1`] = `
Array [
  Array [
    "",
  ],
]
`;

exports[`getKey server and live 2`] = `
Array [
  Array [
    "",
    true,
  ],
]
`;

exports[`getKey server and live 3`] = `
Array [
  Array [
    "",
    true,
  ],
]
`;

exports[`getSqlAuth server and live 1`] = `
Array [
  Array [
    "MySQL-DB-Live",
  ],
]
`;

exports[`getSqlAuth server and live 2`] = `
Array [
  Array [
    "MySQL-DB-Live",
    true,
  ],
]
`;

exports[`getSqlAuth server and live 3`] = `
Array [
  Array [
    "MySQL-DB-Live",
    true,
  ],
]
`;
